--- a/src/POFileConsistency.in
+++ b/src/POFileConsistency.in
@@ -74,7 +74,7 @@ def addIgnoreConsistency(po, e):
     header = header + ('X-POFile-IgnoreConsistency: %s\\n' % e)
 
     lines = po.prepare_replace(1)
-    if lines != None:
+    if lines is not None:
         file = open(po.filename, 'w')
         po.execute_replace(lines, header, 1, file, breaknewlines = 1)
         file.close()
@@ -195,7 +195,7 @@ def interactiveConsistency(map, equivalent):
                         po.parse()
                         po.parseHeader()
                         lines = po.prepare_replace(message)
-                        if lines != None:
+                        if lines is not None:
                             file = open(fx, 'w')
                             po.execute_replace(lines, newmsgstr, 1, file)
                             file.close()
