--- a/src/POFileClean.in
+++ b/src/POFileClean.in
@@ -6,7 +6,8 @@
 # Pedro Morais <morais@kde.org>
 # José Nuno Pires <jncp@netcabo.pt>
 # João Miguel Neves <joao@silvaneves.org>
-# (c) Copyright 2003 - 2006
+# Sven Strickroth <email@cs-ware.de>
+# (c) Copyright 2003 - 2006, 2024
 # Distributable under the terms of the GPL - see COPYING
 
 import sys
@@ -45,7 +46,7 @@ for i in target.data:
         newmsgstr = ""
         po = POFile(target.filename)
         lines = po.prepare_replace(message)
-        if lines != None:
+        if lines is not None:
             file = open(target.filename, 'w')
             po.execute_replace(lines, newmsgstr, 1, file)
             file.close()
